# avalanche-server

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  go.mod  go.sum
.github/workflows/: docker.yml  lint-and-test.yml  rust.yml
cmd/avalancheserver/: main.go
internal/aaa_api/: model.go  requester.go
internal/aaa_api/mocks/: Requester.go
internal/aaa_api/testdata/: midseason.json  offseason_caic.json  offseason_sac.json  offseason_tac.json
internal/api_v1/: api.go  api_v1_test.go
internal/api_v2/: api.go  api_test.go  api_v2.go  api_v2_test.go
internal/api_v3/: api.go  api_test.go
internal/config/: config.go
internal/metrics/: goatcounter.go  middleware.go
k8s/: ingress.yml  namespace.yml  server-service.yaml
src/: avalanche_data_model.rs  avalanche_integration.rs  main.rs
